Last revised February 23, 2014
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2.4 ==
* Released ...

= Code =
* Change `$output = null` to `$output = ''` in `OpusPrimusPosts::sticky_flag` method
* Corrected typo in `'opus_links_pages_after'` hook

= Miscellaneous =
* Change textdomain to match theme slug
* Updated `hooks-actions.txt`

/** ------------------------------------------------------------------------- */
== Version 1.2.3 ==
* Released February 2014

= Code =
* Added more tests
* Added Featured Image thumbnail to standard post-format archive views
* Moved `featured_image` wrapper into OpusPrimusGallery::featured_image method
* Moved `secondary_images` wrapper into OpusPrimusGallery::secondary_images method
* Moved the ellipsis out of the read more link
* Refactored `$output` to use `button` class versus the button element in meta byline flags
* Removed unused parameter `$more` from `OpusPrimusPosts::excerpt_more_link` method
* Removed `$sep_location` parameter as it was not used in `browser_title` method
* Removed Featured Image thumbnail from index view
* Renamed `OpusPrimusDefaults` methods from `show_*` to `display_*`
* Set `display_page_byline` to true as theme author aesthetic choice

= CSS =
* Added post coda post format classes
* Added `dashicons` dependency to main `Opus-Primus` stylesheet
* Added `button` class to replace the button element styles
* Change to only append to the `cite` tag when it is inside the `blockquote` tag
* Center align Calendar Day table header cells
* Fixed really long Post Titles and Words not wrapping as expected
* General clean-up and removal of excess/over-writing properties
* Prepended Post Byline with matching Post-Format dashicons
* Re-Adjust `ul.nav-menu` and `.nav-menu` to `z-index: 3` for main menu
* Reduced the citation font-size for better aesthetics

= JavaScript =
* Re-format code structures
* Removed `table-stripe` class from specific Calendar elements
