@@ -1,5 +1,5 @@
 Hooks – Filters
-Currently available: 78
+Currently available: 77
 
 There are many filter hooks available for use with Opus Primus.
 The naming convention follows this general guideline: opus-< relevant text description >
@@ -21,7 +21,7 @@ The filters are listed below by file, in order of appearance:
         opus_author_description_excerpt_length
         opus_author_description_excerpt_extender
         opus_author_description_excerpt_link
-        opus_first_author_by_text
+        opus_first_author_details_text
         opus_modified_author_by_text
     includes\class.OpusPrimusBreadcrumbs.php
         opus_post_breadcrumbs_home_text
@@ -37,7 +37,7 @@ The filters are listed below by file, in order of appearance:
         opus_more_images_text
     includes\class.OpusPrimusImages.php
         opus_archive_image_title
-        opus_linked_image_message
+        opus_linked_image_message*
         opus_archive_image_excerpt
         opus_archive_image_content
         opus_exif_dimensions_label
@@ -95,4 +95,5 @@ The filters are listed below by file, in order of appearance:
         opus_tagline_output_’ . $post->ID
         opus_taglines_text_field_description
 
-Last revised July 21, 2013
+Last revised February 23, 2014
+* currently unavailable
